# Kit-API-Optimization

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci-api.yml  ci-core.yml  ci-data.yml  ci-media.yml  ci-pay.yml  release.yml
docs/: api.md  core.md  data.md  guide.md  index.md  media.md  pay.md
example-app/: main.py  requirements.txt
example-app/static/: docs.html
kit-api/: README.md  pyproject.toml
kit-api/kit_api/: __init__.py  circuit_breaker.py  cost_tracker.py  idempotency.py  rate_limiter.py  retry_engine.py
kit-api/kit_api/adapters/: __init__.py  celery_adapter.py  redis_adapter.py
kit-api/kit_api/middleware/: __init__.py  django.py  fastapi.py
kit-api/tests/: test_circuit_breaker.py  test_retry_engine.py
kit-core/: README.md  pyproject.toml
kit-core/kit_core/: __init__.py  config.py  exceptions.py  logger.py  redis.py  redis_client.py
kit-core/tests/: test_config.py  test_exceptions.py  test_redis_client.py
kit-data/: README.md  pyproject.toml
kit-data/kit_data/: __init__.py  batch_loader.py  cache.py  concurrency.py  counter.py  exceptions.py  pagination.py  replica_router.py
kit-data/tests/: test_batch_loader.py  test_cache.py  test_concurrency.py  test_counter.py  test_pagination.py  test_replica_router.py
kit-media/: README.md  pyproject.toml
kit-media/kit_media/: __init__.py  caption_job.py  cdn_router.py  chunked_upload.py  presigned_url.py  processor.py
kit-media/kit_media/adapters/: __init__.py  gcs_adapter.py  r2_adapter.py  s3_adapter.py
kit-media/tests/: test_cdn_router.py  test_processor.py
kit-pay/: README.md  pyproject.toml
kit-pay/kit_pay/: __init__.py  budget_enforcer.py  event_processor.py  grace_handler.py  idempotency_key.py  plan_state.py  webhook_receiver.py
kit-pay/kit_pay/adapters/: __init__.py  paddle_adapter.py  stripe_adapter.py
kit-pay/tests/: test_budget_enforcer.py  test_plan_state.py  test_webhook_receiver.py
