[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kit-api"
version = "0.1.0"
description = "API optimization toolkit providing rate limiting, circuit breaking, retries, idempotency, and cost tracking."
requires-python = ">=3.10"
dependencies = [
    "kit-core",
    "httpx>=0.27",
]

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100", "starlette"]
celery = ["celery>=5.3"]
