[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kit-api"
version = "0.1.0"
description = "API optimization toolkit providing rate limiting, circuit breaking, retries, idempotency, and cost tracking."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Moniruzzaman Shawon", email = "m.zaman.djp@gmail.com" },
]
keywords = ["rate-limiting", "circuit-breaker", "retry", "idempotency", "fastapi", "redis", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "kit-core",
    "httpx>=0.27",
]

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100", "starlette"]
celery = ["celery>=5.3"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fakeredis>=2"]

[project.urls]
Homepage = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Documentation = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/tree/main/docs"
Repository = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Issues = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/issues"
