[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shawonkit-data"
version = "0.1.0"
description = "Data-access optimization toolkit — batch loading (N+1), caching with stampede protection, and concurrency limiting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Moniruzzaman Shawon", email = "m.zaman.djp@gmail.com" },
]
keywords = ["dataloader", "n+1", "cache", "stampede", "bulkhead", "redis", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "shawonkit-core",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fakeredis>=2"]

[project.urls]
Homepage = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Documentation = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/tree/main/docs"
Repository = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Issues = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/issues"

# Distribution name (shawonkit-data) differs from the import package (kit_data),
# so tell hatchling which directory to ship.
[tool.hatch.build.targets.wheel]
packages = ["kit_data"]
