[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kit-media"
version = "0.1.0"
description = "Media handling toolkit — presigned URLs, chunked uploads, CDN routing, and processing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Moniruzzaman Shawon", email = "m.zaman.djp@gmail.com" },
]
dependencies = [
    "kit-core>=0.1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.14"]
r2 = ["boto3>=1.34"]
all = ["boto3>=1.34", "google-cloud-storage>=2.14"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fakeredis>=2"]
