[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shawonkit-media"
version = "0.1.0"
description = "Media handling toolkit — presigned URLs, chunked uploads, CDN routing, and processing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Moniruzzaman Shawon", email = "m.zaman.djp@gmail.com" },
]
keywords = ["media", "presigned-url", "cdn", "uploads", "s3", "gcs", "redis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia",
    "Typing :: Typed",
]
dependencies = [
    "shawonkit-core>=0.1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.14"]
r2 = ["boto3>=1.34"]
all = ["boto3>=1.34", "google-cloud-storage>=2.14"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fakeredis>=2"]

[project.urls]
Homepage = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Documentation = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/tree/main/docs"
Repository = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization"
Issues = "https://github.com/Moniruzzaman-Shawon/Kit-API-Optimization/issues"

# Distribution name (shawonkit-media) differs from the import package (kit_media),
# so tell hatchling which directory to ship.
[tool.hatch.build.targets.wheel]
packages = ["kit_media"]
