[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kit-pay"
version = "0.1.0"
description = "Payment processing toolkit for idempotency, webhooks, event processing, plan state, grace periods, and budget enforcement."
requires-python = ">=3.10"
dependencies = [
    "kit-core",
    "httpx>=0.27",
]

[project.optional-dependencies]
stripe = ["stripe>=8.0"]
paddle = ["paddle-python-sdk>=1.0"]
